src/test/deca/syntax/valid/created/include-file-valid.ass
; start main program
; Main program
	STORE R2, 3(GB)
; Beginning of main instructions:
	HALT
pile_pleine:
	WSTR "Error: pile pleine"
	WNL
	ERROR
Overflow_error:
	WSTR "Error: Overflow during arithmetic operation"
	WNL
	ERROR
division_zero:
	WSTR "Error: Division by zero"
	WNL
	ERROR
io_error:
	WSTR "Error: Input/Output error"
	WNL
	ERROR
; end main program
